2001-02-04  Akim Demaille  <akim@epita.fr>

	* automake.in (%dependencies): Don't be initialize globally for
	all the files, but in...
	(&initialize_per_input): here.
	(&depend): New.
	(@phony): Replace all occurrences with the corresponding &depend
	invocation.

2001-02-03  Tom Tromey  <tromey@redhat.com>

	* header.am (install-@DIR@HEADERS): Use INSTALL_HEADER.
	* header-vars.am (INSTALL_HEADER): New macro.

	* automake.texi (Rebuilding): New node.

2000-12-29  Derek Price  <derek.price@openavenue.com>

	* automake.in (handle_dependencies): Switched the DEP_FILES
	definition to be conditional on @AMDEP@.

2001-02-03  Ville Laurikari <vlaurika@hutcs.cs.hut.fi>

	* depcomp (aix): New side-effect dependency tracking mode, for
	the C for AIX compiler.
	* m4/depend.m4 (AM_DEPENDENCIES): Recreate `conftest.c' and
	`conftest.h' for each test.

2001-02-03  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Dist): Updated to mention caveat of putting
	directory in EXTRA_DIST and also providing a nice example of
	removing the CVS dir.
	From Ganesan Rajagopal.

	* m4/depend.m4 (depcpp): Run tests in a subdir.  Fixes report from
	Bob Proulx.

	* automake.in (scan_one_autoconf_file): Disable warning about
	AM_PROG_LIBTOOL.

	* automake.in (handle_configure): Don't modify variable which
	aliases list element.  Don't push @inputs onto the dist list.
	Fixes colon7.test.
	(initialize_per_input) [dist_dirs]: New variable.
	(handle_dist_worker): Use global dist_dirs.
	(handle_configure): Set dist_dirs entries at toplevel.

2001-02-02  Gordon Sadler <gbsadler1@lcisp.com>

	* automake.texi (Java Support): Added index, @section.

2001-02-02  Pavel Roskin  <proski@gnu.org>

	* automake.in (scan_autoconf_traces): Restore trace messages.

	* automake.in (handle_aclocal_m4): Fix stripping of the initial
	"./" from the dependencies of aclocal.m4.
	Reported by Ralf Corsepius.

2001-02-01  Pavel Roskin  <proski@gnu.org>

	* aclocal.in: Rename "verbosity" to "verbose". Always prepend