@@ -1,5 +1,14 @@
 2001-02-04  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (@clean): Remove, replaced by...
+	($dependencies{'clean'}): this.
+	Use `&depend' instead of push'ing into @clean.
+	(handle_factored_dependencies): For the time being, skip 'clean'.
+	(do_one_clean_target): Don't ask for argument 1 and 4 as they are
+	always `clean', and `@clean'.
+
+2001-02-04  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (%dependencies): Don't be initialize globally for
 	all the files, but in...
 	(&initialize_per_input): here.
